oxiplate-derive/tests/crates/unreachable-stable/tests/broken/unhandled-prefix-operator.stderr
error: proc-macro derive panicked
 --> tests/broken/unhandled-prefix-operator.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Internal Oxiplate error. Enable `better-internal-errors` feature for an easier-to-debug error message. Error: Unhandled prefix operator

error[E0277]: `Data` doesn't implement `std::fmt::Display`
  --> tests/broken/unhandled-prefix-operator.rs:12:9
   |
11 |           "{}",
   |            -- required by this formatting parameter
12 | /         Data {
13 | |             value: "Hello World!"
14 | |         }
   | |_________^ `Data` cannot be formatted with the default formatter
   |
help: the trait `std::fmt::Display` is not implemented for `Data`
  --> tests/broken/unhandled-prefix-operator.rs:5:1
   |
 5 | struct Data {
   | ^^^^^^^^^^^
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
